--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,18 @@
+/** @format */
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+    Helvetica Neue, sans-serif;
+
+  background: url("../public/static/mesh-gradient.png");
+
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #dadbe4;
 }
 
 a {
