added background image

--- a/components/banner.module.scss
+++ b/components/banner.module.scss
@@ -1,3 +1,5 @@
+/** @format */
+
 /**
  * By default, this is a mobile breakpoint *
  *
@@ -57,7 +59,7 @@
   background-color: var(--text-purple-dark);
 }
 
-/** 
+/**
     Breakpoints:
     ------------
     sm: min-width: 640px; //small device
