--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,10 @@
 /** @format */
 
-html,
-body {
+* {
+  box-sizing: border-box;
+}
+
+html {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
@@ -18,10 +21,6 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
 }
 
 p {
