--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,47 @@
 /** @format */
 
-* {
-  box-sizing: border-box;
-}
-
-html {
+body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-    Helvetica Neue, sans-serif;
+  font-family: IBMPlexSans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
-  background: url("../public/static/mesh-gradient.png");
+  background: url("/static/mesh-gradient.png");
 
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
-  color: #dadbe4;
+  color: #373b64;
+}
+
+@font-face {
+  font-family: "IBMPlexSans";
+  font-style: normal;
+  font-weight: 500;
+  src: url("/fonts/IBMPlexSans-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "IBMPlexSans";
+  font-style: normal;
+  font-weight: 600;
+  src: url("/fonts/IBMPlexSans-SemiBold.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "IBMPlexSans";
+  font-style: normal;
+  font-weight: 700;
+  src: url("/fonts/IBMPlexSans-Bold.ttf") format("truetype");
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 p {
@@ -64,8 +85,8 @@ button:focus {
 }
 
 :root {
-  --text-purple: rgb(31, 28, 59);
-  --text-purple-dark: rgb(18, 15, 61);
+  --text-purple: rgba(67, 56, 202, 1);
+  --text-purple-dark: rgba(79, 70, 229, 1);
   --text-black: rgba(17, 24, 39, 1);
   --text-white-100: rgba(229, 231, 235, 1);
 }
